--- a/index.html
+++ b/index.html
@@ -47,6 +47,25 @@
             <p class="dessert">Cinnamon Roll</p><p class="price">2.50</p>
           </article>
         </section>
+        <section>
+          <h2>Additional</h2>
+          <img src="https://cdn.freecodecamp.org/curriculum/css-cafe/coffee.jpg" alt="coffee icon"/>
+          <article class="item">
+            <p class="extra">Chamomile Tea</p><p class="price">3.00</p>
+          </article>
+          <article class="item">
+            <p class="extra">Hot Chocolate</p><p class="price">3.75</p>
+          </article>
+          <article class="item">
+            <p class="extra">Turkey Sandwiches</p><p class="price">3.50</p>
+          </article>
+          <article class="item">
+            <p class="extra">Carrot Soup</p><p class="price">4.00</p>
+          </article>
+          <article class="item">
+            <p class="extra">Tomato Salad</p><p class="price">4.50</p>
+          </article>
+        </section>
       </main>
       <hr class="bottom-line">
       <footer>
